2014-11-07  Marek Polacek  <polacek@redhat.com>

	* c-c++-common/ubsan/undefined-2.c: New test.

2014-11-05  Uros Bizjak  <ubizjak@gmail.com>

	PR target/63538
	* gcc.target/i386/pr63538.c: New test.

2014-11-03  Marek Polacek  <polacek@redhat.com>

	PR c/52769
	* gcc.dg/pr52769.c: New test.

2014-10-31  DJ Delorie  <dj@redhat.com>

	* gcc.dg/20141029-1.c: New.

2014-10-31  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/63697
	* c-c++-common/ubsan/overflow-sub-3.c: New test.

2014-10-30  Georg-Johann Lay  <avr@gjlay.de>

	PR63633
	* gcc.target/avr/torture/pr63633-ice-mult.c: New test.

2014-10-30  Release Manager

	* GCC 4.9.2 released.

2014-10-29  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/aarch64/madd_after_asm_1.c: New test.

2014-10-27  Guozhi Wei  <carrot@google.com>

	PR tree-optimization/63530
	gcc.dg/vect/pr63530.c: New test.

2014-10-27  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/entry_queues2.adb: New test.

2014-10-25  Yury Gribov  <y.gribov@samsung.com>

	PR sanitizer/63638
    	* c-c++-common/asan/pr63638.c: New test.

2014-10-24  Markus Trippelsdorf  <markus@trippelsdorf.de>

	PR bootstrap/63632
	* g++.dg/torture/pr63632.C: New test.

2014-10-21  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/63563
	* gcc.target/i386/pr63563.c: New test.

2014-10-20  Yury Gribov  <y.gribov@samsung.com>

	Backported from mainline
	2014-05-30  Jakub Jelinek  <jakub@redhat.com>

	* c-c++-common/asan/misalign-1.c: New test.
	* c-c++-common/asan/misalign-2.c: New test.

2014-10-17  Jakub Jelinek  <jakub@redhat.com>

	* c-c++-common/asan/instrument-with-calls-1.c: Add
	-fno-sanitize=address -fsanitize=kernel-address to dg-options.
	* c-c++-common/asan/instrument-with-calls-2.c: Likewise.

	PR tree-optimization/63302
	* gcc.c-torture/execute/pr63302.c: New test.

2014-10-16  Yury Gribov  <y.gribov@samsung.com>

	Backport from mainline
	2014-09-01  Yury Gribov  <y.gribov@samsung.com>

	PR sanitizer/61897
	PR sanitizer/62140
